# spherimatch

./: .gitignore  .mega-linter.yml  LICENSE.txt  README.md  pyproject.toml
.github/linters/: .cspell.json  .isort.cfg  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml  python-publish-pypi.yml
docs/source/: conf.py  index.rst  install.rst
docs/source/dev/: index.rst  pycorrelator.rst  pycorrelator.tests.rst  spherimatch.rst
docs/source/ref/: index.rst
docs/source/tutorial/: duplicates_removal.rst  fof.rst  index.rst  input_validation.rst  xmatch.rst
spherimatch/: __init__.py  catalog.py  chunk.py  chunk_generator.py  chunk_generator_grid.py  euclidean_vs_angular_distance_local.py  fof.py  result_fof.py  result_xmatch.py  utilities_spherical.py  xmatch.py
spherimatch/tests/: test_xmatch.py
tests/: test_catalog.py  test_chunk.py  test_fof.py  test_result_xmatch.py  test_toolbox_spherical.py  test_xmatch.py
